# AI-Video-Studio

./: .gitignore  AGENTS.md  AGENTS_PRD.md  CLAUDE.md  NOTICES.md  README.md  electron-builder.yml  index.html  launch-wan2gp-browser.bat  package.json  pnpm-lock.yaml  python-deps-hash.txt  settings.json
.projectmem/: PROJECT_MAP.md  summary.md
Wan2GP/: setup.py
backend/: WANGP_BACKEND.md  api_types.py  app_factory.py  app_handler.py  ltx2_server.py  progress_types.py  pyproject.toml  wangp_model_packs.py
backend/_routes/: director.py  generation.py  model_profiles.py  music_gen.py  settings.py
backend/handlers/: __init__.py  _settings_utils.py  director_generation_handler.py  generation_handler.py  health_handler.py  image_generation_handler.py  model_profiles_handler.py  music_generation_handler.py  prompt_enhancement_handler.py  retake_handler.py  settings_handler.py  text_handler.py  video_generation_handler.py
backend/model_profiles/: __init__.py  profiles.py  resolution_resolver.py
backend/runtime_config/: runtime_config.py
backend/server_utils/: media_validation.py
backend/services/: __init__.py  audio_metadata.py  director_compiler.py  interfaces.py  reframe_wangp_mapping.py  services_utils.py  video_clip.py  wangp_bridge.py
backend/state/: app_settings.py  app_state_types.py
backend/tests/: conftest.py  test_audio_metadata.py  test_auth.py  test_director_compiler.py  test_director_generation.py  test_generation.py  test_health.py  test_logging_policy.py  test_model_download_specs.py  test_model_profiles.py  test_music_generation.py  test_music_profiles.py  test_prompt_enhancement.py  test_prompt_relay.py  test_reframe_wangp_mapping.py  test_response_models.py  test_settings.py  test_state_actions.py  test_wangp_bridge.py  test_wangp_model_packs.py  test_wangp_music_integration.py  test_wangp_source.py
backend/tests/fakes/: __init__.py  fake_wangp_bridge.py  services.py
backend/tests/fixtures/wangp/director/: README.md  continue_video_injected.json  depth.json  end_image.json  guide_audio.json  human_motion.json  ingredients.json  injected_frames.json  source_video_audio.json
backend/tools/: inspect_wangp_music_models.py
backend/typings/cv2/: __init__.pyi
docs/: AiVS_Pre-Release_Code_Audit_and_Cleanup_Plan.md  CONTRIBUTING.md  DIRECTOR_MODE_V1.md  DIRECTOR_MODE_V1_IMPLEMENTATION_PLAN.md  INSTALLER.md  MEDIA_LIBRARY_PLAN.md  Model Packs.txt  PHASE0_AUDIT.md  PHASE4.1_DETAILS.md  PHASE4_DETAILS.md  REFRAME_MODE.md
electron/: app-paths.ts  app-state.ts  main.ts  preload.ts  project-storage.ts  python-backend.ts  window.ts  (+2 more)
(+397 files in other folders)
